Switched Runner to Java to make Babbage happier